addresses PR/47512 properly return NULL for failed allocations not 0x8 with size checks enabled.